--- a/dayCourse_server/package.json
+++ b/dayCourse_server/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/jeongyuje0ngyujeong/dayCourse.git"
   },
-  "author": "jeongyuje0ngyujeong",
+  "author": "dayCourseServer",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jeongyuje0ngyujeong/dayCourse/issues"
