--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -6,7 +6,10 @@ on:
 
 jobs:                                 
   build:                              
-    runs-on: ubuntu-24.04             
+    runs-on: ubuntu-24.04    
+    defaults:
+      run:
+        working-directory: ./dayCourse_client/client         
     steps:                            
       - uses: actions/checkout@v4 
 
