--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -21,8 +21,9 @@ jobs:
 
       - name: Build React App
         run: npm run build
+            echo ${{ github.workspace }}
 
-        
+
       # - name: Deploy                  # Upload build file to S3
       #   env:
       #    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
