--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -16,6 +16,15 @@ jobs:
       - name: Check Node v
         run: node -v
 
+      - name: Cache node modules      # node modules 캐싱
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-
+            ${{ runner.OS }}-
+
       - name: Install dependencies    
         run: npm install
 
