--- a/dayCourse_server/package.json
+++ b/dayCourse_server/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "express": "^4.21.1",
-    "pm2": "^5.4.2"
+    "pm2": "^5.4.2",
+    "cors": "^2.8.5"
   },
   "bugs": {
     "url": "https://github.com/jeongyuje0ngyujeong/dayCourse/issues"
