workflows ssh edit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,6 @@ jobs:
               sudo n 20.9.0;
             fi"
 
-
       - name: ssh + git pull + npm install + pm2 start
         env:
           SSH_PRIVATE_KEY: ${{ secrets.DAYCOURSEBACKEND }}  
@@ -63,4 +62,6 @@ jobs:
             sudo setcap 'cap_net_bind_service=+ep' $(which node) 
 
             (pm2 delete all || true) && pm2 start test/search-blog.js
-          "
+            echo 'aaaaaaa'
+            pm2 list
+            curl -X GET "http://localhost:3000/home"
