--- a/dayCourse_client/client/package.json
+++ b/dayCourse_client/client/package.json
@@ -6,10 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "localforage": "^1.10.0",
-    "match-sorter": "^7.0.0",
     "axios": "^1.7.7",
-    "cors": "^2.8.5",
+    "localforage": "^1.10.0",
+    "match-sort": "^1.0.5",
+    "match-sorter": "^7.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
