--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -31,22 +31,18 @@ jobs:
             SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
             REMOTE_HOST: ${{ secrets.EC2_HOST }}
             REMOTE_USER: ubuntu
+            APP_DIR: '/home/ubuntu/dayCourse_server'
           run: |
             eval "$(ssh-agent -s)"  # SSH 에이전트 시작
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
             ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST "
-              if [ ! -d \"$APP_DIR\" ]; then
+            if [ ! -d \"$APP_DIR\" ]; then
                 git clone -b dayCourseServer https://github.com/jeongyuje0ngyujeong/dayCourse.git $APP_DIR;
-              fi &&
-              cd $APP_DIR/dayCourse_server &&
-
-              LOCAL_COMMIT=$(git rev-parse HEAD) &&
-              REMOTE_COMMIT=$(git ls-remote origin dayCourseServer | grep HEAD | awk '{print $1}') &&
-              if [ \"$LOCAL_COMMIT\" != \"$REMOTE_COMMIT\" ]; then
-                git pull origin dayCourseServer &&
-                npm install &&
-                pm2 restart app;
-              else
-                echo 'Already up-to-date. No deployment needed.';
-              fi"
+            else
+                cd $APP_DIR && git pull origin dayCourseServer;  # 이미 존재하면 최신 코드 pull
+            fi &&
+            cd $APP_DIR/dayCourse_server &&
+            npm install &&
+            pm2 restart app.js"
+          
 
