--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -37,12 +37,12 @@ jobs:
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
             ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST "
             if [ ! -d \"$APP_DIR\" ]; then
-                git clone -b dayCourseServer https://github.com/jeongyuje0ngyujeong/dayCourse.git $APP_DIR;
+                git clone -b dayCourseServer https://github.com/jeongyuje0ngyujeong/dayCourse.git $APP_DIR; # 특정 브랜치로 clone 진행
             else
                 cd $APP_DIR && git pull origin dayCourseServer;  # 이미 존재하면 최신 코드 pull
             fi &&
-            cd $APP_DIR/dayCourse_server &&
+            cd $APP_DIR/dayCourse_server &&     # 정확한 경로로 이동
             npm install &&
-            npx pm2 restart app.js"
+            npx pm2 restart /home/ubuntu/dayCourse_server/dayCourse_server/app.js"  # app.js 경로 오류로 인해 절대 경로 지정
           
 
