--- a/dayCourse_client/client/package.json
+++ b/dayCourse_client/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "localforage": "^1.10.0",
     "match-sort": "^1.0.5",
     "match-sorter": "^7.0.0",
