--- a/dayCourse_server/package.json
+++ b/dayCourse_server/package.json
@@ -13,9 +13,11 @@
   "author": "dayCourseServer",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "mysql2": "^3.11.3",
     "pm2": "^5.4.2"
   },
   "bugs": {
