--- a/dayCourse_server/package.json
+++ b/dayCourse_server/package.json
@@ -15,10 +15,15 @@
   "dependencies": {
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1" ,
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pm2": "^5.4.2"
   },
   "bugs": {
