--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -17,7 +17,7 @@ jobs:
         # 2. env 파일 만들기
         - name: Create .env file from Secret
           run: |
-            echo "${{ secrets.ENV_FILE }}" > .env
+            echo "${{ secrets.ENV_FILE }}" > /home/ubuntu/dayCourse_server/dayCourse_server/.env
 
 
         - name: Crea2te .env file from Secret
@@ -29,9 +29,9 @@ jobs:
         - name: Upload .env file to Server
           uses: appleboy/scp-action@v0.1.1
           with:
-            SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-            REMOTE_HOST: ${{ secrets.EC2_HOST }}
-            REMOTE_USER: ubuntu
+            host: ${{ secrets.EC2_HOST }}
+            username: ubuntu
+            key: ${{ secrets.EC2_SSH_KEY }}
             source: ".env"
             target: "/home/ubuntu/dayCourse_server/dayCourse_server"
   
