--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -14,26 +14,19 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v4
 
-        # 2. env 파일 만들기
-        - name: Create .env file from Secret
-          run: |
-            echo "${{ secrets.ENV_FILE }}" > .env
-
-
-        - name: Crea2te .env file from Secret
-          run: |
-            pwd
-            ls
-            cat .env
+        # # 2. env 파일 만들기#
+        # - name: Create .env file from Secret
+        #   run: |
+        #     echo "${{ secrets.ENV_FILE }}" > .env
   
-        - name: Upload .env file to Server
-          uses: appleboy/scp-action@v0.1.1
-          with:
-            SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-            REMOTE_HOST: ${{ secrets.EC2_HOST }}
-            REMOTE_USER: ubuntu
-            source: ".env"
-            target: "/home/ubuntu/dayCourse_server/dayCourse_server"
+        # - name: Upload .env file to Server
+        #   uses: appleboy/scp-action@v0.1.1
+        #   with:
+        #     host: ${{ secrets.EC2_HOST }}
+        #     username: ubuntu
+        #     key: ${{ secrets.EC2_SSH_KEY }}
+        #     source: ".env"
+        #     target: "/home/ubuntu/dayCourse_server/dayCourse_server"
   
         # 3. node 다운
         - name: install node
@@ -59,7 +52,10 @@ jobs:
             SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
             REMOTE_HOST: ${{ secrets.EC2_HOST }}
             REMOTE_USER: ubuntu          
-            APP_DIR: '/home/ubuntu/dayCourse_server'          
+            APP_DIR: '/home/ubuntu/dayCourse_server'  
+            JWT_SECRET: ${{ secrets.JWT_SECRET }}
+            GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+            TMAP_APP_KEY: ${{ secrets.TMAP_APP_KEY }}        
           run: |
             eval "$(ssh-agent -s)"
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
@@ -87,4 +83,4 @@ jobs:
               fi &&
               
               sudo setcap 'cap_net_bind_service=+ep' $(which node) 
-              (pm2 delete all || true) && pm2 start app.js"
+              (pm2 delete all || true) && JWT_SECRET=$JWT_SECRET GOOGLE_API_KEY=$GOOGLE_API_KEY TMAP_APP_KEY=$TMAP_APP_KEY pm2 start app.js"
