--- a/dayCourse_server/package.json
+++ b/dayCourse_server/package.json
@@ -4,7 +4,8 @@
   "description": "jungle project haejo",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "pm2 start ecosystem.config.js --env production"
   },
   "repository": {
     "type": "git",
