--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -53,9 +53,9 @@ jobs:
             REMOTE_HOST: ${{ secrets.EC2_HOST }}
             REMOTE_USER: ubuntu          
             APP_DIR: '/home/ubuntu/dayCourse_server'  
-            JWT_SECRET: 'gowh241017!@'
-            GOOGLE_API_KEY: 'AIzaSyDKWY8E-Qjx_Bt7mgOGh7bUKIoFgmEwo6E'
-            TMAP_APP_KEY: 'XxXWTihaLS9axB3B0rqq84pGH854BTXhhYDtVX10'        
+            JWT_SECRET: ${{ secrets.JWT_SECRET }}
+            GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+            TMAP_APP_KEY: ${{ secrets.TMAP_APP_KEY }}        
           run: |
             eval "$(ssh-agent -s)"
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
