--- a/dayCourse_server/package.json
+++ b/dayCourse_server/package.json
@@ -27,7 +27,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pm2": "^5.4.2",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "util": "^0.12.5"
   },
   "bugs": {
     "url": "https://github.com/jeongyuje0ngyujeong/dayCourse/issues"
