--- a/.github/workflows/deploy_python.yml
+++ b/.github/workflows/deploy_python.yml
@@ -13,34 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Deploy to EC2
-        env:
-          HOST: ${{ secrets.AI_EC2_HOST }}
-          USER: ${{ secrets.EC2_USER }}
-          KEY: ${{ secrets.EC2_SSH_KEY }}
-        run: |
-          scp -i $KEY -r . $USER@$HOST:dayCourseAi  # 파일 전송
-          ssh -i $KEY $USER@$HOST "cd /path/to/your/deployment && pkill -f flask && nohup python app.py &"
-
-           # SSH로 서버에 연결하여 패키지 설치 및 애플리케이션 실행
-          ssh -i $KEY $USER@$HOST << EOF
-            cd /home/ubuntu/dayCourseAi  # 애플리케이션 경로로 이동
-            python3 -m venv venv  # 가상환경 생성
-            source venv/bin/activate  # 가상환경 활성화
-            pip install -r requirements.txt  # requirements.txt 기반으로 의존성 설치
-            nohup python app.py &  # 애플리케이션 실행
-          EOF
-
       # 1. SSH 설정 및 Python 설치
       - name: Install Python on EC2 if missing
         env:
@@ -63,18 +35,21 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           REMOTE_HOST: ${{ secrets.EC2_HOST }}
           REMOTE_USER: ${{ secrets.EC2_USER }}          
-          APP_DIR: '/home/ubuntu/ai_flask_server'  # 서버의 애플리케이션 경로
+          APP_DIR: '/home/ubuntu/dayCourseAi'  
         run: |
           eval "$(ssh-agent -s)"
           echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
           ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST "
             if [ -d \"$APP_DIR/.git\" ]; then
-              cd $APP_DIR &&
+              echo 'exists + pull'
+              cd $APP_DIR/dayCourse_ai &&
               git config pull.rebase true &&
               git reset --hard origin/AiServer &&
               git pull origin AiServer;
             else
+              echo 'not exist + clone'
               git clone -b AiServer https://github.com/jeongyuje0ngyujeong/dayCourse.git $APP_DIR;
+              cd $APP_DIR/dayCourse_ai
             fi"
 
       # 3. 가상 환경 설정 및 의존성 설치
@@ -99,7 +74,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           REMOTE_HOST: ${{ secrets.EC2_HOST }}
           REMOTE_USER: ${{ secrets.EC2_USER }}
-          APP_DIR: '/home/ubuntu/ai_flask_server'
+          APP_DIR: '/home/ubuntu/dayCourseAi/dayCourse_ai'
         run: |
           eval "$(ssh-agent -s)"
           echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
