--- a/.github/workflows/deploy_python.yml
+++ b/.github/workflows/deploy_python.yml
@@ -27,6 +27,9 @@ jobs:
               echo 'Installing Python 3.x'
               sudo apt-get update &&
               sudo apt-get install -y python3 python3-venv python3-pip
+            else
+              echo 'Ensuring python3-venv is installed'
+              sudo apt-get install -y python3-venv
             fi"
 
       # 2. 코드 배포 및 환경 설정
