--- a/.github/workflows/deploy_python.yml
+++ b/.github/workflows/deploy_python.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Python on EC2 if missing
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.EC2_HOST }}
+          REMOTE_HOST: ${{ secrets.AI_EC2_HOST }}
           REMOTE_USER: ${{ secrets.EC2_USER }}
         run: |
           eval "$(ssh-agent -s)"
@@ -36,7 +36,7 @@ jobs:
       - name: Deploy code to EC2
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.EC2_HOST }}
+          REMOTE_HOST: ${{ secrets.AI_EC2_HOST }}
           REMOTE_USER: ${{ secrets.EC2_USER }}          
           APP_DIR: '/home/ubuntu/dayCourseAi'  
         run: |
@@ -62,7 +62,7 @@ jobs:
       - name: Set up virtual environment and install dependencies
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.EC2_HOST }}
+          REMOTE_HOST: ${{ secrets.AI_EC2_HOST }}
           REMOTE_USER: ${{ secrets.EC2_USER }}            
           APP_DIR: '/home/ubuntu/dayCourseAi/dayCourse_ai'
         run: |
@@ -79,7 +79,7 @@ jobs:
       - name: Configure and Start Flask AI Application via systemd
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.EC2_HOST }}
+          REMOTE_HOST: ${{ secrets.AI_EC2_HOST }}
           REMOTE_USER: ${{ secrets.EC2_USER }}
           APP_DIR: '/home/ubuntu/dayCourseAi/dayCourse_ai'
         run: |
