--- a/dayCourse_server/package.json
+++ b/dayCourse_server/package.json
@@ -28,6 +28,7 @@
     "passport-local": "^1.0.0",
     "pm2": "^5.4.2",
     "redis": "^4.7.0",
+    "socket.io": "^4.8.1",
     "util": "^0.12.5"
   },
   "bugs": {
