--- a/dayCourse_client/client/package.json
+++ b/dayCourse_client/client/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "match-sort": "^1.0.5",
     "match-sorter": "^7.0.0",
+    "mysql2": "^3.11.3",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
