--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -26,6 +26,8 @@ jobs:
           REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL }}
           REACT_APP_CONSUMER_KEY: ${{ secrets.REACT_APP_CONSUMER_KEY }}
           REACT_APP_CONSUMER_SECRET: ${{ secrets.REACT_APP_CONSUMER_SECRET }}
+          REACT_APP_BASE_URLSS: ${{ secrets.REACT_APP_BASE_URLSS }}
+          REACT_APP_ODSAY_KEY: ${{ secrets.REACT_APP_ODSAY_KEY }}
         run: |
           npm run build
           echo ${{ github.workspace }}
