--- a/dayCourse_client/client/package.json
+++ b/dayCourse_client/client/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sort": "^1.0.5",
