--- a/dayCourse_client/client/package.json
+++ b/dayCourse_client/client/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
+    "heic2any": "^0.0.4",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
