모듈추가설치

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -28,7 +28,7 @@ jobs:
         #     source: ".env"
         #     target: "/home/ubuntu/dayCourse_server/dayCourse_server"
   
-        # 3. node 다운
+        # 2. node 다운
         - name: install node
           env:
             SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
@@ -44,6 +44,21 @@ jobs:
                 sudo apt-get install -y nodejs &&
                 sudo npm install -g n &&
                 sudo n 22.0.0
+              fi"
+
+        # 3. heic 변환 다운
+        - name: install libheif
+          env:
+            SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+            REMOTE_HOST: ${{ secrets.EC2_HOST }}
+            REMOTE_USER: ubuntu
+          run: |
+            eval "$(ssh-agent -s)"
+            echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+            ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST "
+              if ! dpkg -l | grep -q libheif-dev; then
+                echo "Installing libheif-dev..."
+                sudo apt-get install -y libheif-dev
               fi"
 
         # 4. 배포
