--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -29,6 +29,11 @@ jobs:
             ${{ runner.OS }}-build-
             ${{ runner.OS }}-
 
+      - name: Debug REACT_APP_BASE_URL
+        run: echo "REACT_APP_BASE_URL=${{ secrets.REACT_APP_BASE_URL }}"
+        env:
+          REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL }}
+            
       - name: Install dependencies    
         run: npm install
 
